# practice-data-processing

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  docker-compose_2.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.develop  README.md  compose.yaml
backend/.sqlx/: query-32fc410c32afafa5a4d46dabe82a95580b8997462bcebf35b97cb7a0500a1b9b.json  query-5f34688a4047c6e1ad4901cd3f53239c0121c0e32e8422e195ac7be4808c916c.json  query-6e4fb55ab23ad9d5525574e06b852fc909d9dda4c39b0e78a6d99b5ac27ae2f5.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
backend/database_init/: inti.sql
backend/src/: main.rs  test.rs
backend/src/quadratic_formula/: mod.rs  quadratic_formula.rs
backend/src/user/: user_entity.rs  user_repository.rs
frontend/: Cargo.toml  Dockerfile  Dockerfile.develop  README.md  Trunk.toml  index.html  nginx.conf
frontend/src/: contexts.rs  main.rs  mod.rs
frontend/src/api/: mod.rs  user.rs
frontend/src/components/: alert.rs  input.rs  login_form.rs  sidebar.rs
frontend/src/config/: config.rs
frontend/src/pages/: hello.rs  home.rs  login.rs  mod.rs  not_found.rs
helm_charts/: Chart.yaml  values.yaml
helm_charts/templates/backend/: deployment.yml  ingress.yml  service.yml
helm_charts/templates/database/: deployment.yml  service.yml
helm_charts/templates/frontend/: deployment.yml  ingress.yml  service.yml
infrastructure/: .terraform.lock.hcl  README.txt  main.tf  variables.tf
src/backend/: main.rs
src/frontend/: main.rs  mod.rs  test.rs
