[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

#server
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

#sql
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "macros"], default-features = false }

# serde
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

#env
dotenvy = "0.15.7"

tower-http = {version = "0.6.1", features = ["cors"]}
