[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

#server
axum = "0.8.4"
tokio = { version = "1.42", features = ["full"] }

#sql
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros"], default-features = false }

# serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.133"

#env
dotenvy = "0.15.7"

tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
