[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew Fremework
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

# serde
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

#env
dotenvy = "0.15.7"

gloo-net = "0.6.0"
web-sys = { version = "0.3.72", features = ["HtmlInputElement"] }

# I may not need this/these in the futues, but I do for now.
# I added this when I was troubleshoottung the CORS issue.
wasm-bindgen-futures = "0.4.45"
